[package]
name = "actix-cfwks-subconverter-yaml"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
serde = "1.0"
serde_yaml = "0.9"
serde_json = "1.0"
regex = "1"
encoding = "0.2"
serde_urlencoded = "0.7.1"
rand = "0.8.5"
urlencoding = "2.1.3"
serde_qs = "0.13.0"
lazy_static = "1.5.0"
local-ip-address = "0.6.1"
qrcode = "0.14.1"
image = "0.25.2"
base64 = "0.13.1"
